# He-2

./: .gitignore  LICENSE  README.md  Vagrantfile
scripts/: automation_all.py  code_cov_no_prep.sh  drclient.py  env.sh  extract.py  localize.py  setup_folders.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/: common_defines.h  imageinfo.h  meminfo.h  utilities.h
src/common/src/: imageinfo.cpp  meminfo.cpp  utilities.cpp
src/dr_clients/: CMakeLists.txt
src/dr_clients/include/: cpuid.h  defines.h  funcreplace.h  functrace.h  funcwrap.h  inops.h  inscount.h  memdump.h  memtrace.h  misc.h  moduleinfo.h  moduleinfo_funcs.h  output.h  profile_global.h  stack.h  template_client.h  utilities.h
src/dr_clients/include/halide_srcs/: halide.h
src/dr_clients/lib32/: Halide.h  dll_example.h
src/dr_clients/src/: cpuid.c  debug.c  funcreplace.c  functrace.c  funcwrap.c  halide.c  inscount.c  instrace.c  instrace_prev.c  main.c  memdump.c  memtrace.c  misc.c  moduleinfo.c  moduleinfo_funcs.c  profile_global.c  profile_perthread.c  stack.c  template_client.c  utilities.c
src/dr_clients/src/halide_srcs/: funcwrap.c  inscount.c  instrace.c
src/dr_clients/utility/: funcwrap.c  instrace.c
src/postprocess/: CMakeLists.txt
src/postprocess/buildex/: CMakeLists.txt
src/postprocess/buildex/analysis/: CMakeLists.txt
src/postprocess/buildex/analysis/include/analysis/: conditional_analysis.h  indirection_analysis.h  preprocess.h  staticinfo.h  tree_analysis.h  x86_analysis.h
src/postprocess/buildex/analysis/src/: conditional_analysis.cpp  indirection_analysis.cpp  preprocess.cpp  staticinfo.cpp  tree_analysis.cpp  x86_analysis.cpp
src/postprocess/buildex/halide/: CMakeLists.txt
src/postprocess/buildex/halide/include/halide/: halide.h
src/postprocess/buildex/halide/src/: halide.cpp
src/postprocess/buildex/main/: CMakeLists.txt
src/postprocess/buildex/main/src/: main.cpp
src/postprocess/buildex/memory/: CMakeLists.txt
src/postprocess/buildex/memory/include/memory/: memanalysis.h  memdump.h  meminstrace.h  memregions.h
src/postprocess/buildex/memory/src/: memanalysis.cpp  memdump.cpp  meminstrace.cpp  memregions.cpp
src/postprocess/buildex/tests/: CMakeLists.txt
src/postprocess/buildex/tests/src/: test_vector.cpp
src/postprocess/buildex/trees/: CMakeLists.txt
src/postprocess/buildex/trees/include/trees/: nodes.h  trees.h
src/postprocess/buildex/trees/src/: abs_node.cpp  abs_tree.cpp  comp_abs_node.cpp  comp_abs_tree.cpp  conc_node.cpp  conc_tree.cpp  node.cpp  tree.cpp
src/postprocess/buildex/utility/: CMakeLists.txt
src/postprocess/buildex/utility/include/utility/: defines.h  fileparser.h  print_helper.h
src/postprocess/buildex/utility/src/: fileparser.cpp  print_helper.cpp
src/postprocess/msummary/: CMakeLists.txt  process.cpp
src/postprocess/msummary/src/: process.cpp
src/preprocess/: CMakeLists.txt
src/preprocess/code_diff/: CMakeLists.txt
src/preprocess/code_diff/src/: diff.cpp
src/preprocess/filter_funcs/: CMakeLists.txt
src/preprocess/filter_funcs/include/: filter_logic.h  memlayout.h  moduleinfo.h
src/preprocess/filter_funcs/src/: localize.cpp  main.cpp  memlayout.cpp  moduleinfo.cpp
src/preprocess/image_cons/: CMakeLists.txt
src/preprocess/image_cons/src/: main.cpp
src/stb/: CMakeLists.txt
src/test_cases/: CMakeLists.txt
src/test_cases/c/: CMakeLists.txt
src/test_cases/c/src/: arith.cpp  blur.cpp  calls.cpp  convoluted.cpp  invert.cpp
src/test_cases/halide/: CMakeLists.txt
src/test_cases/halide/src/: halide_blur_hvscan.cpp  halide_blur_naive.cpp  halide_rotate.cpp  halide_scale.cpp  halide_snakes.cpp  halide_threshold.cpp  halide_wrap.cpp
src/test_cases/halide/test/: halide_blur_hvscan_test.cpp  halide_blur_naive_test.cpp  halide_rotate_test.cpp  halide_scale_test.cpp  halide_snakes_test.cpp  halide_threshold_test.cpp  halide_wrap_test.cpp
